Nieuwe afbeeldingen en inleiding herschreven

--- a/inleiding.tex
+++ b/inleiding.tex
@@ -5,7 +5,7 @@
 \chapter{\IfLanguageName{dutch}{Inleiding}{Introduction}}
 \label{ch:inleiding}
 
-Men zal het niet beseffen maar zonder de Mainframe zouden veel hedendaagse diensten wegvallen. Ook al is de mainframe voor velen iets uit het verleden blijven veel sectoren er op vertrouwen. Bijvoorbeeld de banken de kans is groot dat als je iets betaalt met je bankkaart dat de transactie verwerkt wordt door een mainframe. Of de vliegmaatschappijen zou je een kijk kunnen nemen naar de computer die gebruikt word om je in te checken op je vlucht in het vliegveld zal je merken dat dit hoogstwaarschijnlijk een terminal is die aangesloten zit op een Mainframe. Verder wordt de mainframe nog gebruikt in andere sectoren:
+Men zal het niet beseffen maar zonder de Mainframe zouden veel hedendaagse diensten wegvallen. Ook al is de mainframe voor velen iets uit het verleden blijven veel sectoren er op vertrouwen. Bijvoorbeeld de banken, de kans is groot dat als je iets betaalt met je bankkaart dat de transactie verwerkt wordt door een mainframe. Een ander voorbeeld zijn de vliegmaatschappijen, als je eens een kijk zou kunnen nemen naar de computer die gebruikt word op de luchthaven om je in te checken op je vlucht, zal je merken dat dit hoogstwaarschijnlijk een terminal is die aangesloten zit op een Mainframe. Verder wordt de mainframe ook nog gebruikt in andere sectoren zoals:
 
 
 \begin{itemize}
