Stand van zaken aangevuld

--- a/standvanzaken.tex
+++ b/standvanzaken.tex
@@ -140,7 +140,7 @@ Een andere manier om te denken aan een address space is eigenlijk een soort van 
 \section{Interactie met z/OS}
 \label{sec:interactie met z/OS}
 
-Om een systeem te beheren moeten we er natuurlijk ook mee kunnen werken. Voor deze interactie gebruikt men TSO commando om aan te loggen en dan ISPF, een collectie van menus en panelen die brede range van functies aanbied.
+Om een systeem te beheren moeten we er natuurlijk ook mee kunnen werken. Voor deze interactie gebruikt men bijvroobeel een TSO commando om aan te loggen en dan ISPF, een collectie van menus en panelen die brede range van functies aanbied.
 
 \subsection{Time Sharing Option}
 \label{subsec:Time Sharing Option}
