Secties over z/OS zijn af

--- a/standvanzaken.tex
+++ b/standvanzaken.tex
@@ -122,7 +122,7 @@ Een mainframe en een gewone computer hebben 2 soorten fysieke opslag:
 	\item Fysieke storage die zich buiten de mainframe bevindt op een tape of disk drive, dit wordt de auxiliary storage genoemd.
 \end{itemize}
 
-z/OS gebruikt deze 2 soorten storage om een andere soort te vormen namelijk virtual storage. Virtual storage is een combinatie van real en auxiliary storage. Het gebruikt een serie van tabellen en indexen om locaties binnen het auxiliary geheugen te associëren met locaties in de auxiliary storage.
+z/OS gebruikt deze 2 soorten storage om een andere soort te vormen namelijk virtual storage. Virtual storage is een combinatie van real en auxiliary storage. Het gebruikt een serie van tabellen en indexen om locaties binnen het real geheugen te associëren met locaties in de auxiliary storage.
 
 Een address space is eigenlijk een range van virtuele adressen dat het besturingssysteem toekent aan een programma of gebruiker. Voor een gebruiker kan dit beschouwt worden als een container waar zijn data in zit. Door deze addres space moet z/OS niet een heel programma naar de real storage laden om het uit te voeren. Daarom zal men het programma in stukken(ook gekend als pages) van de auxiliary storage naar de real storage verplaatsen in de volgorde die nodig is om het prorgamma uit te voeren. Eens dat een page niet meer nodig is kan men het terugschrijven naar de auxiliary storage. Dit laat z/OS toe om meer programma's simultaan uit te voeren.
 
@@ -140,16 +140,78 @@ Een andere manier om te denken aan een address space is eigenlijk een soort van 
 \section{Interactie met z/OS}
 \label{sec:interactie met z/OS}
 
-Om een systeem te beheren moeten we er natuurlijk ook mee kunnen werken. Voor deze interactie gebruikt men bijvroobeel een TSO commando om aan te loggen en dan ISPF, een collectie van menus en panelen die brede range van functies aanbied.
+Om een systeem te beheren moeten we er natuurlijk ook mee kunnen werken. Voor deze interactie gebruikt men bijvroobeel een TSO/E commando om aan te loggen en dan ISPF, een collectie van menu's en panelen die brede range van functies aanbied.
 
-\subsection{Time Sharing Option}
+\subsection{Time Sharing Option/Extensions en Interactive System Productivity Facility}
 \label{subsec:Time Sharing Option}
 
-\subsection{Interactive System Productivity Facility}
-\label{subsec:Interactive System Productivity Facility}
+TSO/E of Time Sharing Option/Extensions laat gebruikers toe om een interactieve sessie te maken met een z/OS systeem. Hierdoor kunnen ze aanloggen op het z/OS systeem en gebruik maken van een command prompt interface. Maar omdat de command prompt niet echt handig is wordt er meestal gebruik gemaakt van de Interactive System Productivity Facility (ISPF). Dit is een collectie van menu's en panelen die een weide range van functies aanbied voor het bewerken van data in z/OS. Zo bied ISPF onder andere een tekst editor aan en functies voor het vinden en lijsten van bestanden. \cite{Parziale2017}
 
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{img/IPSF}
+	\caption[ISPF hoofdmenu]{Dit is het hoofdmenu van ISPF vanaf hier kan je de verschillende panelen gebruiken}
+	\label{fig:ipsf}
+\end{figure}
+
+
+De bestanden binnen z/OS worden worden ook wel 'data sets' genoemd, dit is de term die ook verder gebruikt zal worden als we over bestanden spreken binnen z/OS. Er zijn 2 soorten data sets waarmee gewerkt word in deze proef.
+
+\begin{itemize}
+	\item Sequential data set: dit zijn data sets waarvan de individuele records georganiseerd zijn op hun fysieke volgorde binnen de dataset.
+	\item Partitioned data set(PDS): dit is een data set die verdeeld is in partities ook wel 'members' deze kunnen een programma bevatten of gewoon data. Eigenlijks is een PDS een collectie van sequentiële data sets. Je zou het dus kunnen vergelijken met een folder met bestanden.
+\end{itemize}
+
+\section{Job Control Language en Job Entry Subsystem}
+\label{sec:Job Control Language en Job Entry Subsystem}
+
+In deze proef worden ook Jobs uitgevoerd voor het opstellen van de logs van z/OS Health Checker. Hiervoor wordt de Job Control Language(JCL) gebruikt. Want om een prorgamma uit te voeren moet het geprocesseerd worden door z/OS.
+
+Vooraleer je het z/OS systeem een programma voor je laat uitvoeren moet je een paar dingen doen. Je moet eerst natuurlijk beschrijven welk programma je wilt uitvoeren maar ook de resources dat deze nodig heeft(bv; eventuele input). Dit doe je met een JCL job. Deze jobs 'submit' je dan naar het Job Entry Subsystem(JES) deze zal de jobs inplannen en hun output verwerken. \cite{Cosimo2018}
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{img/JES}
+	\caption[Visualisatie van JCL en JES]{De gebruiker definieert, maakt en zal een job submitten. Deze wordt dan verwerkt door het Job Entry Subsystem en zal de output van de job teruggeven als resultaat.}
+	\label{fig:jes}
+\end{figure}
+
+\section{System Display and Search Facility}
+\label{sec:System Display and Search Facility}
+
+We willen natuurlijk de output van onze jobs kunnen zien daarvoor wordt er gebruikt gemaakt van de System Display and Search Facility of SDSF. Dit is niet het enigste dat we kunnen zien in SDSF. Voor z/OS Health Checker zullen we namelijk ook deze tool gebruiken om alle info van het systeem op te vragen. Deze utiliteit kan je bereiken via het hoofdmenu van ISPF met de optie 'S'(zie figuur \ref{fig:ispf})
+
+In SDSF zijn er veel panelen en soorten output die je kan opvragen maar de enige die wij zullen gebruiken is namelijk die van z/OS Health Checker die bereik je binnen SDSF via de 'ck' optie. Verder zal je bij het schrijven van jobs het 'Status of jobs' paneel nodig hebben. Dit paneel toont de output van uitgevoerde jobs, dit paneel bereik je met de 'st' optie.
+
+\begin{figure}[h]
+	\centering
+	\includegraphics{img/SDSF}
+	\caption[Hoofdmenu van SDSF]{Hier zie je het hoofdmenu van SDSF en onder andere ook de 2 opties die gebruikt worden doorheen de proef namelijk 'ck' en 'st'}
+	\label{fig:sdsf}
+\end{figure}
+ 
+ \section{De Parmlib}
+ \label{sec:De Parmlib}
+ 
+ z/OS Health Checker heeft ook enkele datasets in de parmlib die verandert worden in deze proef daarom moeten we ook begrijpen wat die parmlib eigenlijk is. Elk z/OS systeem heeft een PDS dat volzit met members die worden meegegeven door IBM. Deze PDS is SYS1.PARMLIB. De members zijn allemaal systeem en applicatie parameters die het systeem nodig heeft bij het opstarten(Initial Program Load(IPL) in mainframe term). Bij de IPL wordt de parmlib dus gelezen om het systeem op te zetten. Deze PDS wordt later ook nog gelezen door andere componenten en programma's. \cite{Cosimo2018}
+ 
+ Een van deze componenten is namelijk z/OS Health Checker in de parmlib zitten namelijk de members die definiëren welke Checks(meer hierover in sectie ) er zullen draaien en welke niet.
+ 
 \section{z/OS Health Checker}
 \label{sec:z/OS Health Checker}
 
+Na een analyse naar de redenen van verscheidene uitvallen kwam men tot een conclusie dat veel hiervan perfect vermeden konden worden. Vele uitvallen kwamen door slechte configuraties die leiden tot single points of failure. Hierdoor is z/OS Health Checker ontwikkelt. \cite{Walle2013}
 
+IBM Health Checker voor z/OS is een tool die helpt om potentiële problemen op te sporen in de configuratie van het systeem. Deze problemen zouden een grote impact kunnen hebben op het systeem of zouden zelfs een uitval kunnen veroorzaken. Health Checker kijkt de huidige instellingen van z/OS en de Sysplex na en vergelijkt deze met instellingen die door IBM aangeraden worden. Bij eventuele problemen zal Health Checker een output genereren met gedetailleerde info over het probleem zelf en op welke manier je het probleem het beste oplost. Wel belangrijk is dat Health Checker eerder een preventieve tool is en geen monitoring tool.
 
+z/OS Health Checker bestaat uit 2 delen
+\begin{itemize}
+	\item De checks
+	\item Het framework	
+\end{itemize}
+
+\subsection{z/OS Health Checker Checks}
+\label{sec:z/OS Health Checker Checks}
+
+\subsection{Health Checker Framework}
+\label{subsec:Health Checker Framework}
