--- a/standvanzaken.tex
+++ b/standvanzaken.tex
@@ -268,4 +268,9 @@ De check output is ook zeer belangrijk deze duid namelijk aan of een check al da
 	\item Debug: Sommige checks kan je in debug mode uitvoeren. Dit wordt vooral enkel gebruikt bij het ontwikkelen van een eigen check.	
 \end{itemize}
 
+Voor een voorbeeld van check output zie bijlage \ref{sec:Check Output}
+
+\subsubsection{Check Status}
+\label{subsubsec:Check Status}
+
 Verder is er nog 1 speciaal soort check. Namelijk de migration check. Deze check helpen je bij het plannen voor een overschakelen van z/OS versie. Deze checks kan je uitvoeren na een migratie om te kijken of deze succesvol was. Deze checks beginnen altijd met 'ZOSMIG'.
