--- a/bachproef-tin.tex
+++ b/bachproef-tin.tex
@@ -76,7 +76,6 @@
 % de figuur of tabel zelf.
 
 \listoffigures
-\listoftables
 
 % Als je een lijst van afkortingen of termen wil toevoegen, dan hoort die
 % hier thuis. Gebruik bijvoorbeeld de ``glossaries'' package.
@@ -120,9 +119,12 @@ Het onderwerp van deze bachelorproef is gebaseerd op een onderzoeksvoorstel dat 
 % Verwijzing naar het bestand met de inhoud van het onderzoeksvoorstel
 \input{../voorstel/voorstel-inhoud}
 
+\renewcommand{\chaptername}{Bijlangen}
+\chapter{Bijlagen}
+
 %%---------- Andere bijlagen --------------------------------------------------
 % TODO: Voeg hier eventuele andere bijlagen toe
-%\input{...}
+\input{bijlagen}
 
 %%---------- Referentielijst --------------------------------------------------
 
